@@ -1,1 +1,2 @@
+requests==2.25.1
 googledrivedownloader==0.4
